--- a/app/src/main/res/layout/food_row.xml
+++ b/app/src/main/res/layout/food_row.xml
@@ -48,25 +48,34 @@
         <LinearLayout
             android:id="@+id/layoutYellowStar"
             android:layout_width="231dp"
-            android:layout_height="61dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/yellowStarImg"
-                android:layout_width="54dp"
-                android:layout_height="42dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:srcCompat="@drawable/add_button" />
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <RatingBar
-                android:id="@+id/ratingBar"
+                android:id="@+id/YellowStarRating"
+                style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:isIndicator="true"
+                android:numStars="10"
+                android:stepSize="0.5"
+                android:layout_gravity="center"
+                android:progressBackgroundTint="@color/blank"
+                android:progressTint="@color/yellow"
+                />
+
+            <RatingBar
+                android:id="@+id/redStarRating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:isIndicator="true"
+                android:numStars="10"
+                android:stepSize="0.5"
+                android:layout_gravity="center"
+                android:progressBackgroundTint="@color/blank"
+                android:progressTint="@color/red"/>
         </LinearLayout>
 
         <LinearLayout
